<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_session_info">SessionInfo</string>
    <string name="title_activity_second_actiity">SecondActiity</string>
    <string name="SessionIm">SessionIm</string>
    <string name="title_activity_second_acitivity">SecondAcitivity</string>
    <string name="date_session">dd/mm/yyyy</string>
    <string name="name_session">Name Session</string>
    <string name="nDurata">Durata:</string>
    <string name="nDate">Data:</string>
    <string name="datetimefall">indica ora e data della caduta</string>
    <string name="durata_session">00:00</string>
    <string name="default_duration">00:00:00</string>
    <string name="number_separator">:</string>
    <string name="description_image">Immagine della sessione</string>
    <string name="description_button">Pulsante con immagine</string>
    <string name="dummy_text">Testo</string>
    <string name="dialog_name_title">Insert a name</string>
    <string name="text_insert_name">Insert a name</string>
    <string name="text_select_rate">Select a rate</string>
    <string name="text_rate_measurement">campioni/s</string>
    <string name="text_low_memory">Low Memory</string>
    <string name="error_file_writing">Error in writing</string>
    <string name="error_arguments">Wrong arguments, please retry</string>
    <string name="app_name">ESP1415</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_inexistent_session">Sessione inesistente</string>
    <string name="picture_descriptor">Session\'s Picture</string>
    <string name="picture_descriptor1">Rename\'s button</string>
    <string name="picture_descriptor2">Delete\'s button</string>
    <string name="picture_descriptor3">Details\'s button</string>
    <string name="delete_dialog">Eliminare la sessione?</string>
    <string name="conferma">OK</string>
    <string name="annulla">Cancels</string>
    <string name="rinomina">Rename</string>
    <string name="dialog_title">Session</string>
    <string name="elimina">Elimina</string>
    <string name="session_list">Session List</string>
    <string name="hint_dialog_1">New name session</string> <!-- Settings strings -->
    <string name="setting_category1">Session data</string>
    <string name="setting_category2">Mail notification</string>
    <string name="setting_category3">Notification</string>
    <string name="vibration_title">Vibrate</string>
    <string name="ringtone_title">Ringtone</string>
    <string name="alarm_title">Alarm</string>
    <string name="summary_alarm">Remember you to do a new daily session</string>
    <string name="dialog_title1">Choose a hour</string>
    <string name="alarmtime_title">Time to alarm</string>
    <string name="texts_titles_stop_session">Vuoi veramente terminare la sessione?</string>
    <string name="texts_titles_delete_session">Vuoi veramente cancellare la sessione?</string>
    <string name="texts_titles_name_session">Nomina la sessione</string>
    <string name="texts_titles_rename_session">Rinomina la sessione</string>
    <string name="texts_button_yes">SI</string>
    <string name="texts_button_no">NO</string>
    <string name="texts_latitude">Latitudine</string>
    <string name="texts_falls">Cadute</string>
    <string name="texts_separator"> : </string>
    <string name="texts_duration">Durata</string>
    <string name="texts_duration_separator">Durata : </string>
    <string name="texts_fall_separator">Cadute : </string>
    <string name="texts_longitude">Longitudine</string>
    <string name="texts_changed_name">Nome cambiato in</string>
    <string name="texts_deleted_session">Sessione cancellata</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="notifylist_title">Notifier List</string>
    <string name="maxduration_title">Max duration</string>
    <string name="notifylist_summary">Manage the list of people to notify by email</string>
    <string name="samplerate_title">Sample rate</string>
    <string name="message_24h">Maybe is too much, retry!</string>
    <string name="mailing_activity_title">Mailing address list:</string> <!-- Settings strings -->

    <string name="title_activity_mailing_list">MailingListActivity</string>

</resources>