<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.dei.unipd.esp1415.SessionList" >
    
    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:background="@color/background_color" >

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_horizontal_margins"
            android:layout_marginStart="@dimen/layout_horizontal_margins"
            android:layout_marginTop="@dimen/layout_vertical_margins"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dialogs_titles_color" />
        
        <ImageView
            android:id="@+id/settings_button"
            android:layout_width="@dimen/row_image_size"
            android:layout_height="@dimen/row_image_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/description_button"
            android:src="@drawable/ic_image_settings" >

        </ImageView>
</RelativeLayout>
    
    <fragment
        android:id="@+id/listfragment"
        android:name="it.dei.unipd.esp1415.views.SessionListFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/image_empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/layout_vertical_margins"
        android:contentDescription="@string/description_image"
        android:src="@drawable/image_empty_list" />
    
</LinearLayout>
