<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:background="@color/background_color" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_horizontal_margins"
            android:layout_marginStart="@dimen/layout_horizontal_margins"
            android:layout_marginTop="@dimen/layout_vertical_margins"
            android:gravity="center"
            android:text="@string/texts_titles_delete_session"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dialogs_titles_color" />
    </RelativeLayout>


    <TextView
        android:id="@+id/center_text"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title"
        android:layout_toLeftOf="@+id/center_text"
        android:layout_toStartOf="@+id/center_text"
        android:background="@drawable/shape_rectangle" >

        <Button
            android:id="@+id/button_ok"
            style="@style/button_style"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_button"
            android:text="@string/texts_button_yes" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title"
        android:layout_toEndOf="@+id/center_text"
        android:layout_toRightOf="@+id/center_text"
        android:background="@drawable/shape_rectangle" >

        <Button
            android:id="@+id/button_ko"
            style="@style/button_style"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_button"
            android:text="@string/texts_button_no" />
    </RelativeLayout>

</RelativeLayout>