<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bar_color" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/description_image" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/image"
            android:layout_toEndOf="@+id/image"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:text="@string/dummy_text" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_name"
            android:layout_alignLeft="@+id/text_name"
            android:layout_alignStart="@+id/text_name"
            android:layout_marginTop="5dp"
            android:text="@string/dummy_text" />

        <Button
            android:id="@+id/button_rename"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/button_play"/>

        <Button
            android:id="@+id/button_stop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_stop" />

        <TextView
            android:id="@+id/text_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/left_point"
            android:layout_toStartOf="@+id/left_point"
            android:text="@string/default_number" />

        <TextView
            android:id="@+id/text_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/default_number" />

        <TextView
            android:id="@+id/text_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/right_point"
            android:layout_toRightOf="@+id/right_point"
            android:text="@string/default_number" />

        <TextView
            android:id="@+id/right_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/text_minutes"
            android:layout_toRightOf="@+id/text_minutes"
            android:text="@string/number_separator" />

        <TextView
            android:id="@+id/left_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/text_minutes"
            android:layout_toStartOf="@+id/text_minutes"
            android:text="@string/number_separator" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <it.dei.unipd.esp1415.views.GraphicView
            android:id="@+id/graphic"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>