<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itembackground"
    android:layout_width="match_parent"
    android:layout_height="@dimen/row_height"
    android:background="@color/row_color" >

    <ImageView
        android:id="@+id/picture"
        android:layout_width="@dimen/action_bar_image_size"
        android:layout_height="@dimen/action_bar_image_size"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/action_bar_margins"
        android:layout_marginStart="@dimen/action_bar_margins"
        android:background="@drawable/shape_image"
        android:contentDescription="@string/description_image"
        android:src="@drawable/image_not_found" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginEnd="@dimen/layout_horizontal_margins"
        android:layout_marginLeft="@dimen/layout_horizontal_margins"
        android:layout_marginRight="@dimen/layout_horizontal_margins"
        android:layout_marginStart="@dimen/layout_horizontal_margins"
        android:layout_marginTop="@dimen/action_bar_margins"
        android:layout_toEndOf="@id/picture"
        android:layout_toRightOf="@id/picture" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/layout_duration"
            android:layout_toStartOf="@+id/layout_duration"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <RelativeLayout
            android:id="@+id/layout_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" >

            <TextView
                android:id="@+id/dummy_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/texts_duration_separator"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/dummy_duration"
                android:layout_toEndOf="@id/dummy_duration"
                android:layout_toRightOf="@id/dummy_duration"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/action_bar_margins"
        android:layout_marginEnd="@dimen/layout_horizontal_margins"
        android:layout_marginLeft="@dimen/layout_horizontal_margins"
        android:layout_marginRight="@dimen/layout_horizontal_margins"
        android:layout_marginStart="@dimen/layout_horizontal_margins"
        android:layout_toEndOf="@id/picture"
        android:layout_toRightOf="@id/picture" >

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/layout_fall"
            android:layout_toStartOf="@+id/layout_fall"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <RelativeLayout
            android:id="@+id/layout_fall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" >

            <TextView
                android:id="@+id/dummy_fall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/texts_fall_separator"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/falls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/dummy_fall"
                android:layout_toEndOf="@id/dummy_fall"
                android:layout_toRightOf="@id/dummy_fall"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>